--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,6 +1,6 @@
 copy:
   script:
   - sudo rm -r ~/../../var/www/html/carpool/
-  - sudo cp -r * ~/../../var/www/html/carpool/
+  - sudo cp -r * ~/../../var/www/html/carpool
   only:
   - 7-setup-ci-cd-on-cloud-server 
