--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -2,5 +2,7 @@ copy:
   script:
   - sudo rm -r ~/../../var/www/html/carpool/*
   - sudo cp -r * ~/../../var/www/html/carpool/
+  - sudo chgrp -R www-data /var/www/html/carpool
+  - sudo chmod -R 775 /var/www/html/carpool/storage
   only:
   - 7-setup-ci-cd-on-cloud-server 
