--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -3,6 +3,7 @@ copy:
   - sudo rm -r ~/../../var/www/html/carpool/*
   - sudo cp -r * ~/../../var/www/html/carpool/
   - sudo composer install
-
+  - sudo chgrp -R www-data /var/www/html/carpool
+  - sudo chmod -R 775 /var/www/html/carpool/storage
   only:
-  - 7-setup-ci-cd-on-cloud-server
+  - 7-setup-ci-cd-on-cloud-server 
