--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -6,6 +6,7 @@ copy:
   - 7-setup-ci-cd-on-cloud-server 
 
 load: 
+  script:
   - sudo composer install
   - sudo chgrp -R www-data /var/www/html/carpool
   - sudo chmod -R 775 /var/www/html/carpool/storage
