--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -7,6 +7,7 @@ copy:
 
 load: 
   script:
+  - cd /var/www/html/carpool
   - sudo composer install
   - sudo chgrp -R www-data /var/www/html/carpool
   - sudo chmod -R 775 /var/www/html/carpool/storage
