--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
-APP_NAME="Carpool Application"
+APP_NAME='Carpool'
 APP_ENV=local
 APP_KEY=base64:wfbv9nRWt6bVS2kIBDgZIBlt2YoLiyvnvTzEuvO41fo=
 APP_DEBUG=true
