--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -18,5 +18,7 @@ load:
   - sudo chgrp -R www-data /var/www/html/carpool
   - sudo chmod -R 775 /var/www/html/carpool/storage
   - sudo php artisan migrate:fresh
+  - sudo mkdir /var/www/html/carpool/public/images
+  - sudo chmod -R 777 /var/www/html/carpool/public/images
   only: 
   - 7-setup-ci-cd-on-cloud-server 
